# ERfA

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  logger.cpp  logger.hpp  main.cpp  relay.cpp  relay.hpp  socket.cpp  socket.hpp  types.hpp
src/socket/: socket.cpp  socket.hpp
